Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51162

AnimatedSprite inside ItemDelegate causes application to crash

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.1
    • 5.6.0 Alpha, 5.6.0 Beta
    • None
    • b2Qt on i.MX6, QtQuick Controls 2: SHA 572d7011f123324e70dde4c75260f32cd696f709 from 5.6 branch
    • 0e30dc40df70cef2cd3f31b913bf867a620327cb

    Description

      Using AnimatedSprite inside ComboBox’s ItemDelegate causes application to crash when ComboBox is opened twice. Any other QML Item placed inside ItemDelegate works fine. See attached example app to reproduce this issue.

      Trace:
      1 QSGTexture::setFiltering qsgtexture.cpp 445 0x68f52378
      2 QQuickAnimatedSprite::prepareNextFrame qquickanimatedsprite.cpp 703 0x6905ff48
      3 QQuickAnimatedSprite::updatePaintNode qquickanimatedsprite.cpp 560 0x690603c4
      4 QQuickWindowPrivate::updateDirtyNode qquickwindow.cpp 2981 0x68fa0974
      5 QQuickWindowPrivate::updateDirtyNodes qquickwindow.cpp 2726 0x68fa130c
      6 QQuickWindowPrivate::syncSceneGraph qquickwindow.cpp 339 0x68fa2560
      7 QSGRenderThread::sync qsgthreadedrenderloop.cpp 542 0x68f727c4
      8 QSGRenderThread::syncAndRender qsgthreadedrenderloop.cpp 588 0x68f7379c
      9 QSGRenderThread::run qsgthreadedrenderloop.cpp 704 0x68f74fd4
      10 QThreadPrivate::start qthread_unix.cpp 340 0x763e36b8
      11 start_thread pthread_create.c 338 0x760ffde0

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Unassigned Unassigned
            kiollila Kimmo Ollila
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes